--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -59,6 +59,13 @@
 		createMenuButton("button5","Add Dummy Meal Lists",postDummyMealLists);
 	};
 	
+	function changeToOrderMeal() {
+		clearMenuRow();
+		clearContainer();
+		createMenuButton("button1","Get All Meal Orders",getAllOrderMeals);
+		createMenuButton("button2","Add Dummy Meal Orders",postDummyOrderMeals);
+	};
+	
 	function clearContainer(){
 		document.getElementById("Container").innerHTML = '';
 	};
@@ -172,13 +179,14 @@
 		postData("ingredient",'{"name":"Beef Meat Ball","type":"Meat","unitType":"gr","caloriePerUnit":0.15}');
 		postData("ingredient",'{"name":"Black Pepper","type":"Spice","unitType":"Piece","caloriePerUnit":0.01}');
 		postData("ingredient",'{"name":"Black Pepper Grinded","type":"Spice","unitType":"gr","caloriePerUnit":0.01}');
-		
+		postData("ingredient",'{"name":"Silver Rice","type":"Rice","unitType":"gr","caloriePerUnit":0.08}');	
 	};
 	
 	function postDummyRoles() {
 		postData("settings/role",'{"name":"ROLE_USER"}');
 		postData("settings/role",'{"name":"ROLE_CHEF"}');
 		postData("settings/role",'{"name":"ROLE_ADMIN"}');		
+		postData("settings/role",'{"name":"ROLE_CUSTOMER"}');	
 	};
 	
 	function postDummyUsers() {
@@ -190,18 +198,57 @@
 	function postDummyRecepies() {
 		postData("recepie",'{"name":"Onion soup","unitType":"Bowl","recepieType":"Soup","caloriePerPortion":45,"portionPerRecepie":10,"ingredients":[{"ingredient_amount":1, "ingredient_Id":1, "recepie_Id":6},{"ingredient_amount":2,"ingredient_Id":2, "recepie_Id":6}]}');
 		postData("recepie",'{"name":"French Fries","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75,"portionPerRecepie":12,"ingredients":[]}');
-		postData("recepie",'{"name":"French Fries 2","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75.0,"portionPerRecepie":12.0,"ingredients":[{"ingredient_Id":1,"ingredient_amount":1.2,"ingredient":{"id":1,"name":"Black Pepper Grinded","type":"Spice","unitType":"gr","caloriePerUnit":0.01}},{"ingredient_Id":2,"ingredient_amount":2.0,"ingredient":{"id":2,"name":"Potato","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.4}},{"ingredient_Id":3,"ingredient_amount":3.0,"ingredient":{"id":3,"name":"Beef Meat Ball","type":"Meat","unitType":"gr","caloriePerUnit":0.15}}]}');		
+		postData("recepie",'{"name":"French Fries 2","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75.0,"portionPerRecepie":12.0,"ingredients":[{"ingredient_Id":1,"ingredient_amount":1.2,"ingredient":{"id":1,"name":"Black Pepper Grinded","type":"Spice","unitType":"gr","caloriePerUnit":0.01}},{"ingredient_Id":2,"ingredient_amount":2.0,"ingredient":{"id":2,"name":"Potato","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.4}},{"ingredient_Id":3,"ingredient_amount":3.0,"ingredient":{"id":3,"name":"Beef Meat Ball","type":"Meat","unitType":"gr","caloriePerUnit":0.15}}]}');
+		postData("recepie",'{"name":"Onion soup","unitType":"Bowl","recepieType":"Soup","caloriePerPortion":45,"portionPerRecepie":10,"ingredients":[{"ingredient_amount":1, "ingredient_Id":1, "recepie_Id":6},{"ingredient_amount":2,"ingredient_Id":2, "recepie_Id":6}]}');
 	};
 	
 	function postDummyMealLists() {
 		postData("meallist",'{"name":"Chicken + Rice + Salad","mealType":"Lunch","caloriePerPerson":1200,"recepies":[{"recepie_amount":1, "mealList_Id":9, "recepie_Id":6},{"recepie_amount":2, "mealList_Id":9, "recepie_Id":7},{"recepie_amount":4, "mealList_Id":9, "recepie_Id":8}]}');
 		postData("meallist",'{"name":"Soup + Meat Balls + Fries + Desert","mealType":"Dinner","caloriePerPerson":2000,"recepies":[{"recepie_amount":4, "mealList_Id":10, "recepie_Id":6},{"recepie_amount":2, "mealList_Id":10, "recepie_Id":8}]}');
 		postData("meallist",'{"name":"Sandwich + Basic Breakfast","mealType":"Breakfast","caloriePerPerson":900}');
+		postData("meallist",'{"name":"Sandwich + Basic Breakfast","mealType":"Breakfast","caloriePerPerson":900}');
+	};
+	
+	function postDummyOrderMeals() {
+		postData("ordermeal",'{"name": "Sevket","deliveryAdress": "leiden","orderDate": "2018-06-12","deliveryDate": "2018-06-13","minCalorie": 4000,"peopleAmount": 10,"mealLists": [{"id": 9},{"id": 10},{"id": 11}]}');
 	};
 	
 	//------------------------------------------
 	//DUMMY DATA CODES END - !! DELETE IN FINAL VERSION !!
 	//------------------------------------------
+	
+	//------------------------------------------
+	//ORDER MEAL PAGE CODES START
+	//------------------------------------------	
+	
+	function getAllOrderMeals() {
+		orderMealDropdownCreate();
+		getListSorted("ordermeal","name",false,true,0)
+	};
+	
+	function orderMealDropdownCreate(){
+		if(document.getElementById("dropdownSort")==null && document.getElementById("dropdownSortDesc")==null ){
+			creatOrderDropdown();
+			createSearchInput("ordermeal");
+			dropdownSort.onchange = getAllOrderMealsSorted;
+			dropdownSortDesc.onchange = getAllOrderMealsSorted;
+		};
+	};
+	
+	function getAllOrderMealsSorted() {
+		var key = document.getElementById("dropdownSort").value;
+		var desc = document.getElementById("dropdownSortDesc").value;
+		if(desc=="Descending")
+			getListSorted("ordermeal",key,true,false,0);
+		else
+			getListSorted("ordermeal",key,false,false,0);
+		document.getElementById("dropdownSort").value = key;
+		
+	};
+	
+	//------------------------------------------
+	//ORDER MEAL PAGE CODES END
+	//------------------------------------------	
 	
 	//------------------------------------------
 	//MEAL LIST PAGE CODES START
@@ -1150,9 +1197,10 @@
 	    </div>
 	    <ul id="mainMenu" class="nav navbar-nav">
 	      <li class="active"><a href="#" onclick="changeToHome()">Home</a></li>
+	      <li><a href="#" onclick="changeToOrderMeal()">Meal Orders</a></li>
 	      <li><a href="#" onclick="changeToMealList()">Meal Lists</a></li>
-	      <li><a href="#" onclick="changeToIngredient()">Ingredients</a></li>
 	      <li><a href="#" onclick="changeToRecepie()">Recepies</a></li>
+	      <li><a href="#" onclick="changeToIngredient()">Ingredients</a></li>
 	      <li id="settingsMenuLi"><a href="#" onclick="changeToSettings()">Settings</a></li>
 	    </ul>
 	    <div class="navbar-right">
