--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Catering Project</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<script src="js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -26,6 +26,7 @@
         </div>
         <div class="row text-center">
 			<a type="button" class="btn btn-default btn-lg" th:href="@{/Catering}" >Login</a>
+			<a type="button" class="btn btn-default btn-lg" th:href="@{/Customer}" >Register New Customer</a>
         </div>
     </div>
 </body>
