--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -9,6 +9,10 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="js/bootstrap.min.js"></script>
 <script>
+	function dummyData(){ //JUST FOR DUMMY DATA - DELETE AT FINAL PROJECT
+		postData("dummy","{}");
+		removeElement("dummyDataMenuLi");
+	}
 	function changeToHome() {
 		clearContainer();
 		clearMenuRow();
@@ -64,6 +68,12 @@
 		clearMenuRow();
 		clearContainer();
 		createMenuButton("button1","Get All Customers",getAllCustomers);
+	};
+	
+	function changeToStock() {
+		clearMenuRow();
+		clearContainer();
+		createMenuButton("button1","Get All Stock Levels",getAllStocks);
 	};
 	
 	function clearContainer(){
@@ -151,6 +161,13 @@
 					getListSorted(api+"/"+search+"/search");
 				};
 				break;
+			case "stock":
+				if (search==""){
+					getListSorted(api);
+				}else{
+					getListSorted(api+"/"+search+"/search");
+				};
+				break;
 			case "settings/role":
 				if (search==""){
 					getRoleListSorted(api);
@@ -168,7 +185,7 @@
 		}
 		
 	};
-	
+
 	//------------------------------------------
 	//CUSTOMER PAGE CODES START
 	//------------------------------------------	
@@ -728,7 +745,38 @@
 	//RECEPIES PAGE CODES END
 	//------------------------------------------	
 	
+	//------------------------------------------
+	//STOCK CODES START
+	//------------------------------------------	
 	
+	function getAllStocks() {
+		stockDropdownCreate();
+		getListSorted("stock","id",false,true,0)
+	};
+	
+	function stockDropdownCreate(){
+		if(document.getElementById("dropdownSort")==null && document.getElementById("dropdownSortDesc")==null ){
+			creatOrderDropdown();
+			createSearchInput("stock");
+			dropdownSort.onchange = getAllStocksSorted;
+			dropdownSortDesc.onchange = getAllStocksSorted;
+		};
+	};
+	
+	function getAllStocksSorted() {
+		var key = document.getElementById("dropdownSort").value;
+		var desc = document.getElementById("dropdownSortDesc").value;
+		if(desc=="Descending")
+			getListSorted("stock",key,true,false,0);
+		else
+			getListSorted("stock",key,false,false,0);
+		document.getElementById("dropdownSort").value = key;
+		
+	};
+	
+	//------------------------------------------
+	//STOCK PAGE CODES END
+	//------------------------------------------
 	
 	//------------------------------------------
 	//SETTINGS PAGE CODES START
@@ -1187,8 +1235,9 @@
 	      <li><a href="#" onclick="changeToMealList()">Meal Lists</a></li>
 	      <li><a href="#" onclick="changeToRecepie()">Recepies</a></li>
 	      <li><a href="#" onclick="changeToIngredient()">Ingredients</a></li>
+	      <li><a href="#" onclick="changeToStock()">Stocks</a></li>
 	      <li id="settingsMenuLi"><a href="#" onclick="changeToSettings()">Settings</a></li>
-	      <li><a href="#" onclick='postData("dummy","{}")'>DUMMY DATA</a></li> 
+	      <li id="dummyDataMenuLi"><a href="#" onclick="dummyData()">DUMMY DATA</a></li> 
 	    </ul>
 	    <div class="navbar-right">
 	      	<form th:action="@{/logout}" method="post">
